[package]
name = "social-manager"
version = "0.1.0"
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["devtools"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
url = "2"
tauri-plugin-opener = "2"

[target.'cfg(target_os = "linux")'.dependencies]
webkit2gtk = { version = "2.0", features = ["v2_38"] }

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
